Altered components, added material-table

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="description" content="User management environment" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,6 +28,11 @@
     />
     <title>The Call Company | Backstage omgeving</title>
   </head>
+  <style>
+    body {
+      background: #f2f4f5 !important;
+    }
+  </style>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
